--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 font-family: "Roboto", sans-serif;
 color: #434455;
 background-color: #fff;
+margin: 0;
+padding: 0;
 }
  
 header {
@@ -21,12 +23,40 @@ header {
     text-transform: uppercase;
     text-align: left;
     letter-spacing: 0.03em;
+    margin-right: 76px;
 }
 
+.display {
+    background-color: white;
+    border-bottom: 1px solid #e7e9fc;
+}
+.container {
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+.container-header {
+    display: flex;
+    align-items: center;
+}
+
+img {
+    display: block;
+}
 .navigation {
     list-style-type: none;
     text-align: center;
+    display: flex;
+    gap: 40px;
+    padding-left: 0;
+    flex-grow: 1;
+    margin: 24px 0;
 }
+.navigation-box {
+    display: flex;
+    align-items: center;
+}
+
 .navigation-menu {
     color: #2e2f42;
     text-decoration: none;
@@ -34,6 +64,7 @@ header {
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
+    padding: 24px 0;
 }
 .navigation-menu:hover,
 .navigation-menu:focus{
@@ -41,10 +72,15 @@ header {
 }
 .contacts {
     font-style: normal;
+    margin-left: 332px;
 }
-.contacts > ul {
+.address {
     list-style-type: none;
     text-align: right;
+    display: flex;
+    gap: 40px;
+    padding-left: 0;
+    margin: 0;
 }
 .contacts-address {
     text-decoration: none;
@@ -60,15 +96,19 @@ header {
 }
 .main-block {
     background: #2e2f42;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 .head-title {
     font-weight: 700;
-        font-size: 56px;
-        line-height: 107%;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: #fff;
-        text-align: center;
+    font-size: 56px;
+    line-height: 107%;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+    text-align: center;
+    max-width: 496px;
+    margin: 0 auto 48px auto;
 }
 .main-button {
     font-weight: 500;
@@ -80,7 +120,15 @@ header {
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.04em;
     cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    min-width: 169px;
+    height: 56px;
+    padding: 16px 32px;
+    margin: 0 auto;
+    display: block;
 }
+
 .main-button:hover,
 .main-button:focus {
     font-weight: 500;
@@ -96,6 +144,18 @@ background-color: #f4f4fd;
 .two-section {
     color: #fff;
 }
+
+.list-description {
+    display: flex;
+    width: 1128;
+    gap: 24px;
+    margin: 0 auto; 
+}
+.advantages-list {
+    list-style-type: none;
+    width: calc((100% - 3 * 24px) / );
+    width: 264px;
+}
 .advantages-title {
     font-weight: 500;
     font-size: 20px;
@@ -103,6 +163,8 @@ background-color: #f4f4fd;
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-align: center;
+    margin-bottom: 8px;
+    margin-top: 0;
 }
 .advantages-description {
     font-weight: 400;
@@ -111,7 +173,19 @@ background-color: #f4f4fd;
     letter-spacing: 0.02em;
     color: #434455;
     text-align: center;
+    margin: 0;
 }
+
+.team-list {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    background: #f4f4fd;
+}
+
+.information-people {
+    padding: 32px 0;
+}
+
 .team-title {
     background: #f4f4fd;
     font-weight: 700;
@@ -121,9 +195,16 @@ background-color: #f4f4fd;
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize
+    display: block;
+    margin-bottom: 72px;
+    margin-top: 0;   
 }
 .team-list-blocks {
     list-style-type: none;
+    display: flex;
+    gap: 24px;
+    margin-bottom: 0;
+    justify-content: center;
 }
 .team-list-box {
     background: #fff;
@@ -136,6 +217,8 @@ background-color: #f4f4fd;
     text-align: center;
     color: #2e2f42;
     text-align: center;
+    margin-bottom: 8px;
+    margin-top: 0;
 }
 .team-text {
     font-weight: 400;
@@ -144,9 +227,24 @@ background-color: #f4f4fd;
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
+    margin: 0;
 }
 .portfolio-list {
     list-style-type: none;
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.portfolio-list-blocks {
+    list-style-type: none;
+    display: flex;
+    width: 1128px;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin: 0 auto;
+    padding-left: 0;
+    row-gap: 48px;
+
 }
 .portfolio-title {
     font-weight: 700;
