--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ background-color: #f4f4fd;
 }
 .advantages-list {
     list-style-type: none;
-    width: calc((100% - 3 * 24px) / 4);
+    width: calc((100% - 72px) / 4)
     width: 264px;
 }
 .advantages-title {
@@ -223,7 +223,7 @@ background-color: #f4f4fd;
     gap: 24px;
     margin-bottom: 0;
     justify-content: center;
-    width: calc((100% - 3 * 24px) / 4);
+    width: calc((100% - 72px) / 4)
 }
 .team-list-box {
     background: #fff;
