--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ background-color: #f4f4fd;
 }
 .advantages-list {
     list-style-type: none;
-    width: calc((100% - 72px) / 4)
+    width: calc((100% - 72px) / 4);
     width: 264px;
     padding-left: 0;
 }
