--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,21 @@ background-color: #fff;
 margin: 0;
 padding: 0;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+ul {
+    padding-left: 0;
+    margin: 0;
+}
  
 header {
     background-color: #fff;
