--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ img {
     gap: 40px;
     padding-left: 0;
     flex-grow: 1;
-    margin: 24px 0;
 }
 .navigation-box {
     display: flex;
@@ -80,6 +79,7 @@ img {
     line-height: 150%;
     letter-spacing: 0.02em;
     padding: 24px 0;
+    display: block;
 }
 .navigation-menu:hover,
 .navigation-menu:focus{
@@ -197,7 +197,6 @@ background-color: #f4f4fd;
     line-height: 120%;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    text-align: center;
     margin-bottom: 8px;
     margin-top: 0;
 }
@@ -207,7 +206,6 @@ background-color: #f4f4fd;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #434455;
-    text-align: center;
     margin: 0;
 }
 
